# bouncing-ball

./: CMakeLists.txt
include/: ball.h
source/: ball.c  main.c
